# ozcding_shool_be_15end

./: .gitignore  Challenge Python_0104.ipynb  LMS_Chaper0508_task.ipynb  LMS_Python_Chaper0913_task.ipynb  LMS_Python_Chaper1416_task.ipynb  LMS_mysql_chapter014_20.ipynb  LMS_mysql_chapter01_06.ipynb  LMS_mysql_chapter07_13.ipynb  Python Chapter 5~9.ipynb  README_LOCAL_SETUP.md  SWAGGER_GUIDE.md  admin_info.yaml  back.yaml  fishbread_db.sql  foint.yaml  main.py  manage.py  pat_hotel.sql  pyproject.toml  python(1일 차)_level1.ipynb  python_level1.ipynb  쇼핑물_db계획서.xlsx
Admin page front-end development project/: indax.html  index.js  signup.html  signup.js
Admin page front-end development project/public/: signup.css
Admin page front-end development project/styles/: admin.css  signup.css
Meeting/: pyproject.toml  test_temp.py
apps/calendars/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
apps/reports/: models.py  serializers.py  urls.py  views.py
apps/study/: admin.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
blog/: from.py  models.py
blog/blog/: admin.py  cb_views.py  form.py  forms.py  models.py  urls.py  views.py
blog/config/: settings.py  urls.py
blog/member/: _views copy.py  views.py
blog/templates/: _blog_update.html  about.html  base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  form_js.html  test_post.html
blog/utils/: model.py
blog_CBV/blog/: cb_views.py  models.py  urls.py  views.py
blog_CBV/config/: settings.py
blog_CBV/templates/: about.html  base.html  blog_detail.html  blog_list.html  test_get.html
blog_login/blog/: admin.py
blog_login/config/: settings.py  urls.py
blog_login/member/: views.py
blog_login/templates/: blog_detail.html  blog_list.html
blog_댓글기능/blog/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
blog_댓글기능/config/: settings.py  urls.py
blog_댓글기능/member/: views.py
blog_댓글기능/templates/: base.html  blog_detail.html  blog_form.html  pagination.html
blog_댓글기능/utils/: model.py
blog_상세페이지/blog/: form.py  models.py  views.py
blog_상세페이지/config/: settings.py  urls.py
blog_상세페이지/member/: views.py
blog_상세페이지/templates/: base.html  blog_detail.html  blog_list.html
bookmark/: bookmark_db.sql  db.sqlite3  manage.py
bookmark/bookmark/: admin.py  models.py  views.py
bookmark/config/: _urls .py  settings.py  urls.py
bookmark/templates/: book_list.html  bookmark_detail.html  bookmark_list.html  gugu.html  movie.html  movies.html
config/: urls.py  views.py
core/: api_spec.py
my-diary-be-15/: README.md  env.dev  pyproject.toml
my-diary-be-15/app/: main.py
my-diary-be-15/app/api/v1/: auth.py  diary.py  question.py  quote.py
my-diary-be-15/app/core/: config.py  security.py
my-diary-be-15/app/db/: base.py  session.py
my-diary-be-15/app/models/: bookmark.py  diary.py  question.py  quote.py  token_blacklist.py  user.py
my-diary-be-15/app/repositories/: question_repo.py  quote_repo.py
my-diary-be-15/app/schemas/: diary.py  question.py  quote.py  user.py
my-diary-be-15/app/scraping/: question_scraper.py  quote_scraper.py
my-diary-be-15/app/services/: auth_service.py  diary_service.py  question_service.py  quote_service.py
my-diary-be-15/app/static/: auth.css  auth.js  dashboard.css  dashboard.js  diaries.js
my-diary-be-15/app/templates/: dashboard.html  diaries.html  login.html
my-diary-be-15/migrations/models/: 2_20251209224949_None.py  3_20251211020951_update.py
책영화 리뷰 노트_Flask/: Vercel-Turso.md  run.py
책영화평론_Flask/: README.md
(+53 files in other folders)
