[tool.poetry]
name = "meeting"
version = "0.1.0"
description = ""
authors = ["schicksal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.38.0"
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
coverage = "7.6.9"
pytest = "8.3.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.4.0"   # mypy plugin과 궁합 좋음

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.12
strict = true

[tool.ruff]
target-version = "py312"
